--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@
 #
 # Check https://circleci.com/docs/2.0/language-python/ for more details
 #
-version: 2
+version: 2.1
 jobs:
   linting:
     docker:
@@ -69,9 +69,9 @@ workflows:
       - docker:
           requires:
             - linting
-          filters:
-            branches:
-              only: [ master ]
+          # filters:
+          #   branches:
+          #     only: [ master ]
       # - deploy-infrastructure:
       #     filters:
       #       branches:
