--- a/src/Makefile
+++ b/src/Makefile
@@ -8,7 +8,7 @@ install:
 test: 
 
 lint:
-	./hadolint Dockerfile
+	hadolint Dockerfile
 	pylint --disable=R,C,W1203 app.py
 
 all: install lint test
