--- a/cloudformation/network.yml
+++ b/cloudformation/network.yml
@@ -3,7 +3,7 @@ Description: >
   Creates a VPC with public subnets for EKS.
 
 Parameters:
-  WORKFLOW_ID:
+  WorkflowId:
     Description: A workflowID that will be prefixed to resource names
     Default: CPROJECT
     Type: String
@@ -43,7 +43,7 @@ Resources:
       EnableDnsHostnames: true
       Tags:
         - Key: Name
-          Value: !Sub ${WORKFLOW_ID}-VPC
+          Value: !Sub ${WorkflowId}-VPC
 
   InternetGateway:
     Type: "AWS::EC2::InternetGateway"
@@ -60,9 +60,9 @@ Resources:
       VpcId: !Ref VPC
       Tags:
         - Key: Name
-          Value: !Sub ${WORKFLOW_ID}-Public-Subnets
+          Value: !Sub ${WorkflowId}-Public-Subnets
         - Key: Network
-          Value: !Sub ${WORKFLOW_ID}-Public
+          Value: !Sub ${WorkflowId}-Public
 
   PublicRoute:
     DependsOn: VPCGatewayAttachment
@@ -83,7 +83,7 @@ Resources:
       SubnetId: !Ref PublicSubnet1
       Tags:
         - Key: Name
-          Value: !Sub ${WORKFLOW_ID}-NatGatewayAZ1
+          Value: !Sub ${WorkflowId}-NatGatewayAZ1
 
   NatGateway2:
     DependsOn:
@@ -96,7 +96,7 @@ Resources:
       SubnetId: !Ref PublicSubnet2
       Tags:
         - Key: Name
-          Value: !Sub ${WORKFLOW_ID}-NatGatewayAZ2
+          Value: !Sub ${WorkflowId}-NatGatewayAZ2
 
   NatGatewayEIP1:
     DependsOn:
@@ -129,7 +129,7 @@ Resources:
         Ref: VPC
       Tags:
         - Key: Name
-          Value: !Sub ${WORKFLOW_ID}-PublicSubnet1
+          Value: !Sub ${WorkflowId}-PublicSubnet1
         - Key: kubernetes.io/role/elb
           Value: 1
 
@@ -150,7 +150,7 @@ Resources:
         Ref: VPC
       Tags:
         - Key: Name
-          Value: !Sub ${WORKFLOW_ID}-PublicSubnet2
+          Value: !Sub ${WorkflowId}-PublicSubnet2
         - Key: kubernetes.io/role/elb
           Value: 1
 
@@ -182,34 +182,34 @@ Outputs:
     Description: Reference to the EKS-VPC
     Value: !Ref VPC
     Export:
-      Name: !Sub ${WORKFLOW_ID}-VPC
+      Name: !Sub ${WorkflowId}-VPC
 
   PublicRouteTable:
     Description: Public Routing Table
     Value: !Ref PublicRouteTable
     Export:
-      Name: !Sub ${WORKFLOW_ID}-PUB-RT
+      Name: !Sub ${WorkflowId}-PUB-RT
 
   SubnetIds:
     Description: Subnets IDs in the VPC
     Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ] ]
     Export:
-      Name: !Sub ${WORKFLOW_ID}-PUB-NETS
+      Name: !Sub ${WorkflowId}-PUB-NETS
 
   SecurityGroup:
     Description: Security group for the cluster control plane communication with worker nodes
     Value: !Ref ControlPlaneSecurityGroup
     Export:
-      Name: !Sub ${WORKFLOW_ID}-SCG
+      Name: !Sub ${WorkflowId}-SCG
 
   PublicSubnet1:
     Description: A reference to the public subnet in the 1st Availability Zone
     Value: !Ref PublicSubnet1
     Export:
-      Name: !Sub ${WORKFLOW_ID}-PUB1-SN
+      Name: !Sub ${WorkflowId}-PUB1-SN
 
   PublicSubnet2:
     Description: A reference to the public subnet in the 2nd Availability Zone
     Value: !Ref PublicSubnet2
     Export:
-      Name: !Sub ${WORKFLOW_ID}-PUB2-SN
+      Name: !Sub ${WorkflowId}-PUB2-SN
