--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,7 +105,7 @@ jobs:
               --tags project=uda-capstone-project \
               --stack-name "cluster-${CIRCLE_WORKFLOW_ID:0:7}" \
               --region ${AWS_DEFAULT_REGION} \
-              --parameter-overrides WorkflowId="${CIRCLE_WORKFLOW_ID:0:7} \
+              --parameter-overrides WorkflowId="${CIRCLE_WORKFLOW_ID:0:7}" \
               --capabilities CAPABILITY_NAMED_IAM
           no_output_timeout: 20m
       - run:
@@ -116,7 +116,7 @@ jobs:
               --tags project=uda-capstone-project \
               --stack-name "nodegroup-${CIRCLE_WORKFLOW_ID:0:7}" \
               --region ${AWS_DEFAULT_REGION} \
-              --parameter-overrides WorkflowId="${CIRCLE_WORKFLOW_ID:0:7} \
+              --parameter-overrides WorkflowId="${CIRCLE_WORKFLOW_ID:0:7}" \
               --capabilities CAPABILITY_NAMED_IAM
 
       - destroy-environment
