--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,7 @@ commands:
             aws cloudformation delete-stack --stack-name "network-<<parameters.workflow_id>>"
             aws cloudformation delete-stack --stack-name "cluster-<<parameters.workflow_id>>"
             aws cloudformation delete-stack --stack-name "nodegroup-<<parameters.workflow_id>>"
+            aws cloudformation delete-stack --stack-name "agency-<<parameters.workflow_id>>"
 jobs:
   linting:
     docker:
@@ -58,7 +59,7 @@ jobs:
             . venv/bin/activate
             make lint 
 
-  docker:
+  build-and-upload-docker-image:
     docker:
       - image: circleci/golang:1.15
     steps:
@@ -76,8 +77,8 @@ jobs:
           name: Upload Docker to Dockerhub
           command: |
             docker login -u="$DOCKERHUB_USERNAME" -p="$DOCKERHUB_PASSWORD"
-            docker tag hello-world-py:latest $DOCKERHUB_USERNAME/hello-world-py:$CIRCLE_WORKFLOW_ID
-            docker push $DOCKERHUB_USERNAME/hello-world-py:$CIRCLE_WORKFLOW_ID
+            docker tag hello-world-py:latest $DOCKERHUB_USERNAME/hello-world-py:${CIRCLE_WORKFLOW_ID:0:7}
+            docker push $DOCKERHUB_USERNAME/hello-world-py:${CIRCLE_WORKFLOW_ID:0:7}
 
   deploy-infrastructure:
     docker:
@@ -87,7 +88,6 @@ jobs:
       - run:
           name: Install dependencies
           command: yum install -y tar gzip
-
       - run:
           name: Ensure project network exists
           command: |
@@ -118,37 +118,99 @@ jobs:
               --region ${AWS_DEFAULT_REGION} \
               --parameter-overrides WorkflowId="${CIRCLE_WORKFLOW_ID:0:7}" \
               --capabilities CAPABILITY_NAMED_IAM
-
+      - run:
+          name: Ensure agency instances exists
+          command: |
+            aws cloudformation deploy \
+              --template-file cloudformation/agency.yml \
+              --tags project=uda-capstone-project \
+              --stack-name "agency-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --region ${AWS_DEFAULT_REGION} \
+              --parameter-overrides WorkflowId="${CIRCLE_WORKFLOW_ID:0:7} 
+      - run:
+          name: Find the IPs of the agency instance for Ansible inventory
+          command: |
+            echo [agency] > ~/inventory.txt
+            aws ec2 describe-instances \
+              --region "${AWS_DEFAULT_REGION}" \
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --filters "Name=tag:Name,Values=${CIRCLE_WORKFLOW_ID:0:7}-agency" \
+              --output text >> ~/inventory.txt
+            cat ~/inventory.txt
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - inventory.txt
       - destroy-environment
+      
+  configure-infrastructure:
+    docker:
+      - image: python:3.7-alpine3.11
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints:
+            - "f9:b4:c1:38:93:de:58:bb:28:b0:6b:7c:2c:c6:6c:90"
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Install dependencies
+          command: |
+            pip install awscli
+            apk add --update ansible
+            apk add --update tar
+            apk add --update gzip
+      - run:
+          name: Configure server
+          command: |
+              cat ~/inventory.txt
+              cd ansible
+              export WORKFLOW_ID=${CIRCLE_WORKFLOW_ID:0:7}
+              ansible-playbook -i ~/inventory.txt configure-server.yml
+      - destroy-environment  
 
-      # - run:
-      #     name: Ensure management instances exists
-      #     command: |
-      #       aws cloudformation deploy \
-      #         --template-file cloudformation/management.yml \
-      #         --tags project=${ENVIRONMENT_NAME}-project \
-      #         --stack-name "${ENVIRONMENT_NAME}-eks-management" \
-      #         --region ${AWS_DEFAULT_REGION} \
-      #         --parameter-overrides file://cloudformation/management-parameters.json \
-      #         --output text >> ~/checkIfDeployed.txt
-      #       cat ~/checkIfDeployed.txt
-      # - run:
-      #     name: Extract the IPs of the management instances for Ansible
-      #     command: |
-      #       echo [management] > ~/inventory.txt
-      #       aws ec2 describe-instances \
-      #         --region "${AWS_DEFAULT_REGION}" \
-      #         --query 'Reservations[*].Instances[*].PublicIpAddress' \
-      #         --filters "Name=tag:Name,Values=${ENVIRONMENT_NAME}-management*" \
-      #         --output text >> ~/inventory.txt
-      #       cat ~/inventory.txt
-      # - persist_to_workspace:
-      #     root: ~/
-      #     paths:
-      #       - inventory.txt
-      #       - checkIfDeployed.txt
+  deploy-k8s:
+    docker:
+      - image: python:3.7-alpine3.11
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints:
+            - "f9:b4:c1:38:93:de:58:bb:28:b0:6b:7c:2c:c6:6c:90"
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update ansible
+      - run:
+          name: Apply Deploy and Service to EKS cluster
+          command: |
+              cat ~/inventory.txt
+              cd ansible
+              ansible-playbook -i ~/inventory.txt deploy-k8s.yml
+              
+      - run:
+          name: Wait for LoadBalancer's domain to become reachable
+          command: |
+              cat ~/inventory.txt
+              echo "Wait 60 seconds..."
+              sleep 60
+      - run:
+          name: Get the LoadBalancer's DNS name
+          command: |
+            cat ~/inventory.txt
+            cd ansible
+            ansible-playbook -i ~/inventory.txt get-elb-dns.yml
+            cat ~/elb_dns.txt
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - elb_dns.txt
+      - destroy-environment
       
 
+  
   destroy-infra-test:
     docker:
       - image: amazon/aws-cli
@@ -160,35 +222,36 @@ jobs:
       - run:
           name: Destroy environments
           command: |
-            aws cloudformation delete-stack --stack-name "network-${CIRCLE_WORKFLOW_ID:0:7}"
-            aws cloudformation delete-stack --stack-name "cluster-${CIRCLE_WORKFLOW_ID:0:7}"
+            aws cloudformation delete-stack --stack-name "agency-${CIRCLE_WORKFLOW_ID:0:7}"
             aws cloudformation delete-stack --stack-name "nodegroup-${CIRCLE_WORKFLOW_ID:0:7}"
+            aws cloudformation delete-stack --stack-name "cluster-${CIRCLE_WORKFLOW_ID:0:7}"
+            aws cloudformation delete-stack --stack-name "network-${CIRCLE_WORKFLOW_ID:0:7}"
 workflows:
   default:
     jobs:
-      # - linting
-      # - docker:
-      #     requires:
-      #       - linting
+      - linting
+      - build-and-upload-docker-image:
+          requires:
+            - linting
+      #     # filters:
+      #     #   branches:
+      #     #     only: [ master ]
+      - deploy-infrastructure:
+          requires:
+            - linting
           # filters:
           #   branches:
           #     only: [ master ]
-      - deploy-infrastructure
-          # requires:
-          #   - linting
-          # filters:
-          #   branches:
-          #     only: [ master ]
-      - destroy-infra-test:
+      - configure-infrastructure:
           requires:
             - deploy-infrastructure
-      # - configure-infrastructure:
-      #     requires:
-      #       - deploy-infrastructure
-      # - configure-cluster:
+      - deploy-k8s:
+          requires:
+            - configure-infrastructure
+            - build-and-upload-docker-image
+      # - destroy-infra-test:
       #     requires:
       #       - configure-infrastructure
-      #       - upload-docker
       # - deploy-docker:
       #     requires:
       #       - configure-cluster
