--- a/cloudformation/agency.yml
+++ b/cloudformation/agency.yml
@@ -27,7 +27,7 @@ Resources:
           ToPort: 22
           CidrIp: 0.0.0.0/0
 
-  agencyHost1:
+  AgencyEc2:
     Type: AWS::EC2::Instance
     Properties:
       InstanceType: t2.micro
