fix env declare

--- a/ansible/configure-server.yml
+++ b/ansible/configure-server.yml
@@ -39,7 +39,7 @@
   become: yes
   vars:
     AWS_DEFAULT_REGION: "{{ lookup('env', 'AWS_DEFAULT_REGION') }}"
-    ENVIRONMENT_NAME: "{{ lookup('env', 'WORKFLOW_ID') }}"
+    WORKFLOW_ID: "{{ lookup('env', 'WORKFLOW_ID') }}"
   pre_tasks:
     - name: Create a kubeconfig file for the cluster
       shell: "aws eks update-kubeconfig --region {{ AWS_DEFAULT_REGION }} --name {{ WORKFLOW_ID }}-cluster"
