--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -182,6 +182,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
+            pip install awscli
             apk add --update ansible
       - run:
           name: Apply Deploy and Service to EKS cluster
