--- a/ansible/roles/install-kubectl/tasks/main.yml
+++ b/ansible/roles/install-kubectl/tasks/main.yml
@@ -1,25 +1,29 @@
 ---
 - name: "Download kubectl"
-  shell: curl -o kubectl "https://dl.k8s.io/release/v1.25.4/bin/linux/amd64/kubectl"
-  args:
-    chdir: $HOME
+  shell: curl -LO "https://dl.k8s.io/release/v1.25.4/bin/linux/amd64/kubectl"
+  # args:
+  #   chdir: $HOME
 
 - name: "Apply execute permissions to the binary"
-  shell: chmod +x ./kubectl
-  args:
-    chdir: $HOME
+  shell: chmod +x kubectl
+  # args:
+  #   chdir: $HOME
 
 - name: "Check kubectl"
-  shell: ./kubectl get -h
-  args:
-    chdir: $HOME
+  shell: kubectl get -h
+  # args:
+  #   chdir: $HOME
 
 - name: "Copy the binary to a folder to the $PATH"
-  shell: mkdir -p $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$PATH:$HOME/bin
-  args:
-    chdir: $HOME
+  shell: |
+    mkdir -p ~/.local/bin && mv ./kubectl ~/.local/bin/kubectl && export PATH=~/.local/bin
+  # args:
+  #   chdir: $HOME
 
 - name: "Add the $HOME/bin path to the shell initialization file"
-  shell: echo 'export PATH=$PATH:$HOME/bin' >> .bashrc
-  args:
-    chdir: $HOME
+  shell: echo 'export PATH=~/.local/bin' >> .bashrc
+  # args:
+  #   chdir: $HOME
+
+- name: "Check kubectl"
+  shell: kubectl get -h
