--- a/ansible/roles/k8s-deploy/tasks/main.yml
+++ b/ansible/roles/k8s-deploy/tasks/main.yml
@@ -4,16 +4,12 @@
     dest: $HOME
 
 - name: Check kubectl connect
-  shell: "./kubectl get -h"
+  shell: "kubectl get -h"
   args:
     chdir: $HOME
 
-- name: Check kubectl connect
-  shell: "./bin/kubectl get -h"
-  args:
-    chdir: $HOME
 
 - name: Apply deployment configuration
-  shell: "./bin/kubectl apply -f app-deployment.yaml"
+  shell: "kubectl apply -f app-deployment.yaml"
   args:
     chdir: $HOME
