--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -220,6 +220,12 @@ jobs:
       - attach_workspace:
           at: ~/
       - run:
+          name: Install awscli
+          command: |
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install
+      - run:
           name: Frontend smoke test.
           command: |
             cat ~/elb_dns.txt
@@ -232,7 +238,7 @@ jobs:
               exit 1
             fi
       # Here's where you will add some code to rollback on failure
-      - destroy-environment
+      # - destroy-environment
 
   cleanup:
     docker:
@@ -271,22 +277,6 @@ jobs:
               echo '--------------------'
             done
   
-  destroy-infra-test:
-    docker:
-      - image: amazon/aws-cli
-    steps:
-      - checkout
-      - run:
-          name: Install dependencies
-          command: yum install -y tar gzip
-      - run:
-          name: Destroy environments
-          command: |
-            aws cloudformation delete-stack --stack-name "agency-${CIRCLE_WORKFLOW_ID:0:7}"
-            aws cloudformation delete-stack --stack-name "nodegroup-${CIRCLE_WORKFLOW_ID:0:7}"
-            aws cloudformation delete-stack --stack-name "cluster-${CIRCLE_WORKFLOW_ID:0:7}"
-            aws cloudformation delete-stack --stack-name "network-${CIRCLE_WORKFLOW_ID:0:7}"
-
 workflows:
   default:
     jobs:
