--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -209,7 +209,7 @@ jobs:
           root: ~/
           paths:
             - elb_dns.txt
-      - destroy-environment
+      # - destroy-environment
       
   smoke-test-app:
     docker:
